fix(ui): fix main nav actions buttons not stretching to viewport height change

--- a/src/style/base.css
+++ b/src/style/base.css
@@ -82,6 +82,7 @@ nav {
 
 .main-action-buttons {
   max-width: 60%;
+  min-height: 100%;
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -89,7 +90,9 @@ nav {
 }
 
 .main-action-buttons > .enfold {
-  padding: 1em 1em 1.2em;
+  display: flex;
+  align-items: center;
+  padding: 0 1em;
   border-radius: 15px 15px 0 15px;
   position: relative;
   width: fit-content;
@@ -124,24 +127,22 @@ main {
   color: var(--on-surface);
 }
 
-.enfold.active::after {
+.enfold.active::after,
+.enfold.active::before {
   position: absolute;
   bottom: 0;
-  right: -30px;
   content: '';
-  border-radius: 0 0 0 15px;
-  box-shadow: -15px 0 0 0 var(--surface-container);
   width: 30px;
   height: 15px;
 }
 
+.enfold.active::after {
+  right: -30px;
+  border-radius: 0 0 0 15px;
+  box-shadow: -15px 0 0 0 var(--surface-container);
+}
 .enfold.active::before {
-  position: absolute;
-  bottom: 0;
   left: -30px;
-  content: '';
   border-radius: 0 0 15px 0;
   box-shadow: 15px 0 0 0 var(--surface-container);
-  width: 30px;
-  height: 15px;
 }
